--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
-    "@sap/ux-specification": "^1.120.11"
+    "@sap/ux-specification": "^1.120.13"
   },
   "scripts": {
     "start": "cds-serve",
     "watch-fiorielements": "cds watch --open fiorielements/webapp/index.html?sap-ui-xx-viewCache=false",
-    "watch-ui5freestyle": "cds watch --open ui5freestyle/webapp/index.html?sap-ui-xx-viewCache=false"
+    "watch-ui5freestyle": "cds watch --open ui5freestyle/webapp/index.html?sap-ui-xx-viewCache=false",
+    "watch-fiorielementsnavto": "cds watch --open fiorielementsnavto/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "sapux": [
     "app/fiorielements",
     "app/ui5freestyle",
-    "app/ui5freestyle"
+    "app/ui5freestyle",
+    "app/fiorielementsnavto",
+    "app/fiorielementsnavto"
   ]
 }
