readme.md file updated and started deployment

--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^7",
-    "express": "^4"
+    "express": "^4",
+    "@sap/cds-hana": "^2",
+    "@sap/xssec": "^3"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
+    "@sap/cds-dk": "^7",
     "@sap/ux-specification": "^1.120.13"
   },
   "scripts": {
@@ -27,5 +30,13 @@
     "app/fiorielementsnavto",
     "app/fiorielementsnavto",
     "app/ui5freestylenavto"
-  ]
+  ],
+  "cds": {
+    "requires": {
+      "[production]": {
+        "db": "hana",
+        "auth": "xsuaa"
+      }
+    }
+  }
 }
