--- a/app/ui5freestylenavto/webapp/manifest.json
+++ b/app/ui5freestylenavto/webapp/manifest.json
@@ -30,7 +30,7 @@
     },
     "dataSources": {
       "mainService": {
-        "uri": "/Ui5/",
+        "uri": "Ui5/",
         "type": "OData",
         "settings": {
           "annotations": [],
@@ -155,5 +155,9 @@
       "async": true,
       "id": "app"
     }
+  },
+  "sap.cloud": {
+    "public": true,
+    "service": "SAPUI5_Crossnavigation.service"
   }
 }
