--- a/app/fiorielements/ui5.yaml
+++ b/app/fiorielements/ui5.yaml
@@ -2,6 +2,9 @@ specVersion: "2.5"
 metadata:
   name: fiorielements
 type: application
+framework:
+  name: SAPUI5
+  version: "1.120.12"
 server:
   customMiddleware:
     - name: fiori-tools-servestatic
