--- a/app/ui5freestyle/webapp/manifest.json
+++ b/app/ui5freestyle/webapp/manifest.json
@@ -30,7 +30,7 @@
     },
     "dataSources": {
       "mainService": {
-        "uri": "/Ui5/",
+        "uri": "Ui5/",
         "type": "OData",
         "settings": {
           "annotations": [],
@@ -157,5 +157,9 @@
   "sap.fiori": {
     "registrationIds": [],
     "archeType": "transactional"
+  },
+  "sap.cloud": {
+    "public": true,
+    "service": "SAPUI5_Crossnavigation.service"
   }
 }
