--- a/app/fiorielementsnavto/webapp/manifest.json
+++ b/app/fiorielementsnavto/webapp/manifest.json
@@ -30,7 +30,7 @@
     },
     "dataSources": {
       "mainService": {
-        "uri": "Ui5/",
+        "uri": "/Ui5/",
         "type": "OData",
         "settings": {
           "annotations": [
